--- a/src/_includes/components/toc.css
+++ b/src/_includes/components/toc.css
@@ -19,7 +19,7 @@
 	.elv-toc {
 		position: absolute;
 		left: 1rem;
-		width: 12.4rem;
+		width: 12.5rem;
 		z-index: 1;
 		height: 100%;
 	}
